# C964-Example

./: .gitignore  BUILD.md  _config.yml  _run_nb.py  ci_c964.md  ci_page.md  intro.md  pyproject.toml  resources.md  support_this_page.md  task1.md  update_C964_site.bat
_build/.doctrees/: ci_c964.doctree  ci_other.doctree  ci_page.doctree  environment.pickle  intro.doctree  resources.doctree  support_this_page.doctree  task1.doctree
_build/.doctrees/task2_c/: task2_part_c.doctree
_build/.doctrees/task2_c/example_sup_class/: sup_class_ex-accuracy.doctree  (+4 more)
_build/.doctrees/task2_doc/: task2_doc.doctree  task2_doc_a_and_b.doctree  task2_doc_d.doctree  task2_doc_finish.doctree
_build/html/: .buildinfo  ci_c964.html  ci_other.html  ci_page.html  genindex.html  intro.html  objects.inv  resources.html  search.html  searchindex.js  sitemap.xml  support_this_page.html  task1.html
_build/html/_sources/: ci_other.md  resources.md  task1.md
_build/html/task2_c/: task2_part_c.html
_build/html/task2_doc/: task2_doc.html  task2_doc_a_and_b.html  task2_doc_d.html  task2_doc_finish.html
resources/: C964 task 2 template.docx  C964 task 2 template.odt  C964_Task1_Approval_Form.docx  C964_Task1_Approval_Form.odt  C964_Task1_Directions_and_Rubric.docx  Capstone_Release_Form.docx  Capstone_Release_Form.odt
task2_c/: task2_part_c.md
task2_c/example_sup_class/: sup_class_ex-accuracy.ipynb  sup_class_ex.ipynb
task2_c/example_sup_reg/: sup_reg_ex.ipynb  sup_reg_ex_accuracy.ipynb  sup_reg_ex_develop.ipynb
task2_doc/: task2_doc.md  task2_doc_d.md  task2_doc_finish.md
(+28 files in other folders)
